# FEUP-AEDA

./: README.md
Praticas/TP1/: parque.cpp
Praticas/TP10/: caixa.cpp
Praticas/TP11/: disjointSets.cpp  maze.cpp
Praticas/TP2/: frota.cpp  frota.h  tests.cpp  veiculo.cpp  veiculo.h
Praticas/TP2 - Extra/: animal.cpp  animal.h  tests.cpp  veterinario.cpp
Praticas/TP3/: grafo.h  tests.cpp
Praticas/TP4/: Exercicio2.txt  parque.h
Praticas/TP5/: jogo.cpp
Praticas/TP6/: balcao.cpp  stackExt.h  tests.cpp
Praticas/TP7/: dicionario.cpp  dicionario.h  jogo.cpp
Praticas/TP9/: aposta.cpp  jogador.cpp  jogador.h
Projetos/Projeto 1/: Activity.cpp  Activity.h  Address.cpp  Address.h  Manager.h  Material.cpp  Material.h  Menus.cpp  Menus.h  Person.cpp  Person.h  School.cpp  School.h  Time.cpp  Time.h  Utils.cpp  Utils.h  main.cpp  materials.txt  teachers.txt
Projetos/Projeto 2/: Activity.cpp  Activity.h  CMakeLists.txt  Date.cpp  Date.h  HashTable.cpp  HashTable.h  Material.cpp  Material.h  Menus.cpp  Menus.h  Person.cpp  Person.h  School.cpp  School.h  Utils.cpp  Utils.h  main.cpp  schools.txt
Testes/PA1516/: CMakeLists.txt  Escritorio.cpp  main.cpp
Testes/PA1617/: CMakeLists.txt  PostOffice.h  Postman.h  main.cpp
Testes/PA1617-2/: CMakeLists.txt  main.cpp
Testes/PA1617-2/Tests/: AfterSalesService.cpp  Purchase.cpp  Test.cpp
Testes/PA1617-3/: ReadingClub.cpp  User.cpp
Testes/PA1617/Tests/: Mail.cpp  Mail.h  PostOffice.cpp  Postman.cpp  Test.cpp
Testes/PA1718-2/: CMakeLists.txt  Doctor.cpp  main.cpp
Testes/PA1718-3/: Expertize.cpp  FEUPConsulting.cpp  (+1 more)
(+48 files in other folders)
